# approve

./: .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  flake8.ini  mypy.ini  pyproject.toml
.github/workflows/: CI.yml  tests.yml
docs/: conf.py  index.rst  requirements.txt
docs/source/: approve.rst  modules.rst
examples/: getting_started.ipynb
src/approve/: models.py  typing.py  utils.py
tests/: conftest.py  test_models.py  test_utils.py
